# NihongoMaster

./: .gitignore  CHANGELOG.md  DECISIONS.md  DEPLOYMENT.md  README.md  SENTENCE_GENERATOR_IMPROVEMENTS.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: prepare-voicevox.yml  release.yml
docs/: CNAME  analytics-worker.js  index.html  latest.json  privacy-policy.html
docs/adr/: 013-birdbrain-learning-model.md
docs/mockups/: pro-flow.html
docs/plans/: wanikani-integration-plan.md  wanikani-on-device-test.md
public/voicevox-samples/: catalog.json
scripts/: generate-audio.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  voicevox.rs
src-tauri/src/commands/: cards.rs  mod.rs  progress.rs  review.rs
src-tauri/src/srs/: fsrs.rs  mod.rs  scheduler.rs
src/data/: grammarGroups.ts  grammarN2.ts  grammarN2_extra.ts  grammarN3.ts  grammarN3_extra.ts  grammarN4.ts  grammarN4_extra.ts  grammarN5.ts  interactiveStories.ts  kanaMnemonics.ts  kanjiCompounds.ts  kanjiGroups.ts  kanjiN2_part1.ts  kanjiN2_part2.ts  kanjiN2_part3.ts  kanjiN3_part1.ts  kanjiN3_part2.ts  kanjiN3_part3.ts  kanjiN4.ts  kanjiN5.ts  kanjiStrokeData.ts  kanjiStrokeDataN4.ts  radicals.ts  readingStories.ts  seedGrammar.ts  seedKana.ts  seedKanji.ts  seedSentences.ts  seedVocab.ts  semanticRules.ts  sentenceExercises.ts  strokeData.ts  vocabGroups.ts  vocabN2_part1.ts  vocabN2_part2.ts  vocabN2_part3.ts  vocabN2_part4.ts  vocabN2_part5.ts  (+16 more)
(+100 files in other folders)
